external-crates/move/crates/move-compiler/tests/move_check/parser/missing_angle_brace_close.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:3:22
  │
3 │         let x = t<u64;
  │                  -   ^ Expected '>'
  │                  │    
  │                  To match this '<'
  │                  Perhaps you need a blank space before this '<' operator?

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:3:22
  │
3 │         let x = t<u64;
  │                      ^
  │                      │
  │                      Unexpected ';'
  │                      Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

